--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <h2 class="section-sub-heading author"> Ralph Waldo Emerson </h2>
         </div>
         <div class="col-lg-6">
-          <img class="jezyk" src="images/jezyk-small.jpg" alt="jezyk">
+          <img class="jezyk" src="images/jezyk-small.png" alt="jezyk">
         </div>
       </div>
     </div>
